--- a/index.html
+++ b/index.html
@@ -5,27 +5,58 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MIPS Web Simulator</title>
     <style>
+      :root {
+        --bg-color: #f5f5f5;
+        --container-bg: white;
+        --text-color: #333;
+        --border-color: #ccc;
+        --highlight-color: #ffff99;
+        --terminal-bg: #2a2a2a;
+        --terminal-text: #fff;
+        --status-bg: #f9f9f9;
+        --table-header-bg: #f2f2f2;
+        --shadow-color: rgba(0, 0, 0, 0.1);
+      }
+
+      [data-theme="dark"] {
+        --bg-color: #1a1a1a;
+        --container-bg: #2a2a2a;
+        --text-color: #e0e0e0;
+        --border-color: #444;
+        --highlight-color: #2c4f7c;
+        --terminal-bg: #000;
+        --terminal-text: #0f0;
+        --status-bg: #333;
+        --table-header-bg: #333;
+        --shadow-color: rgba(0, 0, 0, 0.3);
+      }
+
       body {
         font-family: Arial, sans-serif;
         margin: 0;
         padding: 20px;
-        background-color: #f5f5f5;
+        background-color: var(--bg-color);
+        color: var(--text-color);
+        transition: background-color 0.3s, color 0.3s;
       }
       .container {
         max-width: 1200px;
         margin: 0 auto;
-        background-color: white;
+        background-color: var(--container-bg);
         padding: 20px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 0 10px var(--shadow-color);
         border-radius: 5px;
+        transition: background-color 0.3s, box-shadow 0.3s;
       }
       h1 {
         text-align: center;
-        color: #333;
+        color: var(--text-color);
       }
       .code-container {
-        margin-bottom: 20px;
+        margin-bottom: 50px;
         position: relative;
+        display: flex;
+        justify-content: center;
       }
       #code-editor {
         width: 100%;
@@ -33,8 +64,11 @@
         font-family: "Courier New", monospace;
         font-size: 14px;
         padding: 10px;
-        border: 1px solid #ccc;
+        border: 1px solid var(--border-color);
         resize: vertical;
+        background-color: var(--container-bg);
+        color: var(--text-color);
+        transition: background-color 0.3s, color 0.3s, border-color 0.3s;
       }
       .controls {
         margin-bottom: 20px;
@@ -47,6 +81,7 @@
         border-radius: 4px;
         cursor: pointer;
         font-weight: bold;
+        transition: background-color 0.3s, color 0.3s;
       }
       #run-button {
         background-color: #4caf50;
@@ -60,23 +95,26 @@
         background-color: #f44336;
         color: white;
       }
+
       .status-container {
         margin-bottom: 20px;
         padding: 10px;
-        background-color: #f9f9f9;
-        border: 1px solid #ddd;
+        background-color: var(--status-bg);
+        border: 1px solid var(--border-color);
         border-radius: 4px;
+        transition: background-color 0.3s, border-color 0.3s;
       }
       /* Terminal styles */
       .terminal {
         font-family: "Courier New", monospace;
-        background-color: #2a2a2a;
-        color: #fff;
+        background-color: var(--terminal-bg);
+        color: var(--terminal-text);
         padding: 10px;
         border-radius: 4px;
         min-height: 120px;
         display: flex;
         flex-direction: column;
+        transition: background-color 0.3s, color 0.3s;
       }
 
       #terminal-output {
@@ -90,7 +128,7 @@
       .terminal-input-container {
         display: flex;
         align-items: center;
-        color: #fff;
+        color: var(--terminal-text);
       }
 
       .terminal-prompt {
@@ -103,7 +141,7 @@
         flex: 1;
         background-color: transparent;
         border: none;
-        color: #fff;
+        color: var(--terminal-text);
         font-family: "Courier New", monospace;
         font-size: 14px;
         outline: none;
@@ -116,7 +154,7 @@
 
       /* Status text */
       #status-text {
-        color: #555;
+        color: var(--text-color);
         margin-top: 10px;
         font-style: italic;
       }
@@ -128,16 +166,19 @@
       }
       .display-container {
         flex: 1;
-        border: 1px solid #ddd;
+        border: 1px solid var(--border-color);
         border-radius: 4px;
         padding: 10px;
         max-height: 400px;
         overflow-y: auto;
+        background-color: var(--container-bg);
+        transition: background-color 0.3s, border-color 0.3s;
       }
       .display-container h3 {
         margin-top: 0;
         padding-bottom: 5px;
-        border-bottom: 1px solid #eee;
+        border-bottom: 1px solid var(--border-color);
+        color: var(--text-color);
       }
       table {
         width: 100%;
@@ -147,18 +188,80 @@
       td {
         padding: 8px;
         text-align: left;
-        border-bottom: 1px solid #ddd;
+        border-bottom: 1px solid var(--border-color);
+        transition: border-color 0.3s;
       }
       th {
-        background-color: #f2f2f2;
+        background-color: var(--table-header-bg);
+        transition: background-color 0.3s;
       }
       .highlight {
-        background-color: #ffff99;
+        background-color: var(--highlight-color);
+        transition: background-color 0.3s;
+      }
+      .theme-toggle-container {
+        position: fixed;
+        top: 20px;
+        right: 20px;
+        z-index: 1000;
+      }
+
+      .theme-toggle-btn {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        padding: 8px 16px;
+        border-radius: 20px;
+        border: none;
+        background-color: #000000;
+        color: #ffffff;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        cursor: pointer;
+        transition: all 0.3s ease;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          sans-serif;
+        font-size: 14px;
+        font-weight: 500;
+      }
+
+      .theme-toggle-btn:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+      }
+
+      .theme-toggle-btn:active {
+        transform: translateY(0);
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+      }
+
+      .theme-icon {
+        font-size: 16px;
+      }
+
+      .theme-text {
+        transition: opacity 0.3s ease;
+      }
+
+      /* Dark theme styles */
+      [data-theme="dark"] .theme-toggle-btn {
+        background-color: #ffffff;
+        color: #000000;
+        box-shadow: 0 2px 5px rgba(255, 255, 255, 0.1);
       }
     </style>
   </head>
   <body>
     <div class="container">
+      <div class="theme-toggle-container">
+        <button
+          id="theme-toggle"
+          class="theme-toggle-btn"
+          aria-label="Toggle dark/light mode"
+        >
+          <span class="theme-icon">☀️</span>
+        </button>
+      </div>
+
       <h1>MIPS Web Simulator</h1>
 
       <div class="code-container">
@@ -382,7 +485,7 @@ zero_error:
         </div>
       </div>
     </div>
-
+    </div>
     <script>
       // MIPS Simulator JavaScript Implementation
       class MIPSSimulator {
@@ -481,8 +584,50 @@ zero_error:
               }
             });
           }
+
+          // Add theme toggle event listener
+          document
+            .getElementById("theme-toggle")
+            .addEventListener("click", () => this.toggleTheme());
         }
 
+        toggleTheme() {
+          const currentTheme =
+            document.documentElement.getAttribute("data-theme");
+          const newTheme = currentTheme === "dark" ? "light" : "dark";
+          document.documentElement.setAttribute("data-theme", newTheme);
+
+          // Update the theme toggle button icon and text
+          const themeToggle = document.getElementById("theme-toggle");
+          const themeIcon = themeToggle.querySelector(".theme-icon");
+          const themeText = themeToggle.querySelector(".theme-text");
+
+          if (newTheme === "dark") {
+            themeIcon.textContent = "🌙";
+            themeText.textContent = "Dark";
+
+            // Update editor highlight colors
+            this.clearHighlight();
+            if (this.executingLine !== null) {
+              this.highlightLine(this.executingLine);
+            }
+
+            // Store theme preference
+            localStorage.setItem("theme", "dark");
+          } else {
+            themeIcon.textContent = "☀️";
+            themeText.textContent = "Light";
+
+            // Update editor highlight colors
+            this.clearHighlight();
+            if (this.executingLine !== null) {
+              this.highlightLine(this.executingLine);
+            }
+
+            // Store theme preference
+            localStorage.setItem("theme", "light");
+          }
+        }
         printToTerminal(text) {
           this.terminalOutput += text;
           const terminalOutput = document.getElementById("terminal-output");
